assets/scss/_variables.scss
@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400,400i,700,700i');

// GENERAL VARS

$black: #000;
$white: #fff;
$grey: #666;
$grey-light: #bbb;
$cyan: #85ffed;
$cinderella: #ffe4de;

$garamond: 'Cormorant Garamond', Garamond, serif;


// BREAKPOINTS

$xl: 1200px; // min large desktop
$lg: 992px; // min desktop
$md: 768px; // min tablets
$sm: 576px; // min landscape phone


// THEME VARS

$primary-color: $black;
$primary-color-tint-1: $grey;
$primary-color-tint-2: $grey-light;

$secondary-color: $cyan;

$tertiary-color: $cinderella;

$primary-font-serif: $garamond;


// SITE VARS

$body-max-width: 1170px;

$body-font-size: 16px;
$body-line-height: 1.875em;
$body-font-color: $black;
$body-font-family: $primary-font-serif;

$body-border-width: 20px;

$link-color: $cyan;

$border-width-lg: 9px;
$border-width: 3px;
$border-width-sm: 1px;

$border-width-text: 0.375em;
$border-width-text-offset: 0.1875em;

$space-main-lg: 60px;
$space-main: 30px;
$space-main-sm: 15px;
$space-gutter: 15px;

$space-offset-left: 400px;


// EXTENDS

%main-container {
	// margin: 0 auto;
	max-width: $body-max-width;
}


// MIXINS

@mixin line-decoration($color) {
	position: absolute;
	z-index: -1;
	bottom: $border-width-text-offset;
	left: 0;
	width: calc(100% + 0.75em);
	height: $border-width-text;
	background-color: $color;
}

@mixin line-hover($width) {
	&::before,
  &::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    width: $width;
  }
  &::before {
    height: 1px;
    background-color: $primary-color-tint-2;
  }
  &::after {
    height: 1px;
    transform: scaleX(0);
    transform-origin: left center;
    background-color: $primary-color;
    transition: 0.4s ease-in;
  }

  &:hover {
    &:after {
      transform: scaleX(1);
    }
  }
}

